# SuperWordCounter

./: .gitignore  Cargo.toml  README.md
benchmark/dhat/: dhat-release-dups.out  dhat-release-no-dups.out
benchmark/time-comparator/src/: jupyter_notebook.ipynb
src/: main.rs
src/swc/: mapper.rs  mod.rs  reducer.rs  splitter.rs
